I have fixed some issues with the styling for the tester when on mobile, did some faffing around, all good now

--- a/EmberMetrics-docs/src/index.css
+++ b/EmberMetrics-docs/src/index.css
@@ -42,6 +42,12 @@ h1 {
     text-align: center;
 }
 
+.main {
+    display: flex;
+    width: 100%;
+    padding: 0;
+}
+
 .dark-mode {
     color-scheme: dark;
     --primary: var(--dm-primary);
@@ -68,16 +74,6 @@ body {
     white-space: pre-line;
 }
 
-
-main {
-    display: flex;
-    flex-direction: row;
-    gap: var(--section-padding);
-    padding: var(--section-padding);
-    transition: background-color 0.3s ease;
-    justify-content: center;
-}
-
 .app-home__sub-header {
     max-width: 700px;
     width: 100%;
@@ -101,6 +97,7 @@ main {
     border-bottom: 2px solid var(--secondary);
     transition: all 0.2s ease-in-out;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
+    min-width: 400px;
 }
 
 .header-logo {
@@ -161,6 +158,7 @@ main {
     margin: 1px 50px;
     border-top: 1px solid var(--tertiary);
     border-bottom: 1px solid var(--tertiary);
+    padding: 1px;
 }
 
 .page-break {
@@ -170,6 +168,7 @@ main {
     margin: 20px 0;
     border-radius: var(--border-radius);
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
+    min-width: 400px;
 }
 
 /* Section Styles */
